<resources>
    <string name="app_name">GBPush</string>
    <string name="action_settings">GBProject</string>

    <string name="title_activity_main">main</string>

    <string name="error_no_network">暂无网络,请检查后再试</string>
    <string name="error_cannot_connection_server">无法连接服务器,请稍后再试</string>
    <string name="error_login_fail">用户名或密码错误</string>

    <string name="loading">加载中...</string>

    <string name="login_name">ERP账号</string>
    <string name="login_psw">ERP密码</string>
    <string name="btn_login">登录</string>
    <string name="login_remeber_psw">记住密码</string>
    <string name="login_auto">自动登录</string>
    <string name="txt_login_error">登录出现问题?</string>
    <string name="toast_login_name_null">ERP账号不能为空</string>
    <string name="toast_login_psw_null">ERP密码不能为空</string>

    <string name="title_login_error_desc">解决办法</string>
    <string name="txt_login_error_desc">登录失败解决办法:\n1.手机号登录失败，ERP密码确保正确时，联系HR确认手机号码\n2.ERP账号登录失败，咨询信息中心，确认ERP账号密码是否正确</string>

    <string name="ignore">忽略</string>
    <string name="see_detail">查看</string>

    <string name="nav_pending">待处理</string>
    <string name="nav_done">已处理</string>
    <string name="nav_send">已发送</string>


    <string name="action_open">open</string>
    <string name="action_close">close</string>

    <string name="send_msg_to_user_null">推送人不能为空</string>
    <string name="send_msg_content_null">推送内容不能为空</string>
    <string name="error_send_failed">发送失败,请检查后再发送</string>
    <string name="send_success">发送成功</string>


</resources>
