<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorWhite">

    <LinearLayout
        android:id="@+id/linear_login"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView
            android:src="@drawable/ic_logo"
            android:layout_width="112dp"
            android:layout_height="112dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="fitCenter"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_name"
                android:textSize="14sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_psw"
                android:textSize="14sp"/>
        </android.support.design.widget.TextInputLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">
            <TableRow>
                <CheckBox
                    android:id="@+id/cb_remeberpsw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_remeber_psw"
                    android:checked="true"/>
                <CheckBox
                    android:id="@+id/cb_autologin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_auto"
                    android:checked="false"/>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/btnTheme_focus"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="8dp"
            android:text="@string/btn_login"
            android:textColor="@color/colorWhite"/>

        <TextView android:id="@+id/link_error_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:padding="8dip"
            android:text="@string/txt_login_error"
            android:gravity="center"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>